--- a/requirements.txt
+++ b/requirements.txt
@@ -1,72 +1,61 @@
 argon2-cffi==21.3.0
 argon2-cffi-bindings==21.2.0
-asttokens==2.0.5
+async-generator==1.10
 attrs==21.4.0
 backcall==0.2.0
-black==22.1.0
 bleach==4.1.0
-certifi==2021.10.8
+certifi==2020.6.20
 cffi==1.15.0
-click==8.0.3
 cycler==0.11.0
-debugpy==1.5.1
+dataclasses==0.8
 decorator==5.1.1
 defusedxml==0.7.1
 entrypoints==0.4
-executing==0.8.2
-fonttools==4.29.1
-importlib-resources==5.4.0
-ipykernel==6.8.0
-ipython==8.0.1
+importlib-metadata==4.8.3
+ipykernel==5.5.6
+ipython==7.16.3
 ipython-genutils==0.2.0
 ipywidgets==7.6.5
-jedi==0.18.1
+jedi==0.17.2
 Jinja2==3.0.3
-jsonschema==4.4.0
+jsonschema==3.2.0
 jupyter-client==7.1.2
 jupyter-core==4.9.1
 jupyterlab-pygments==0.1.2
 jupyterlab-widgets==1.0.2
-kiwisolver==1.3.2
+kiwisolver==1.3.1
 MarkupSafe==2.0.1
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
+matplotlib==3.3.4
 mistune==0.8.4
-mypy-extensions==0.4.3
-nbclient==0.5.10
-nbconvert==6.4.1
+nbclient==0.5.9
+nbconvert==6.0.7
 nbformat==5.1.3
 nest-asyncio==1.5.4
 notebook==6.4.8
-numpy==1.22.2
+numpy==1.19.5
 packaging==21.3
 pandocfilters==1.5.0
-parso==0.8.3
-pathspec==0.9.0
+parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==9.0.1
-platformdirs==2.4.1
+Pillow==8.4.0
 prometheus-client==0.13.1
 prompt-toolkit==3.0.26
 ptyprocess==0.7.0
-pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.11.2
 pyparsing==3.0.7
-pyrsistent==0.18.1
+pyrsistent==0.18.0
 python-dateutil==2.8.2
 pyzmq==22.3.0
 Send2Trash==1.8.0
 six==1.16.0
-stack-data==0.1.4
-terminado==0.13.1
+terminado==0.12.1
 testpath==0.5.0
-tomli==2.0.0
 tornado==6.1
-traitlets==5.1.1
+traitlets==4.3.3
 typing_extensions==4.0.1
 wcwidth==0.2.5
 webencodings==0.5.1
 widgetsnbextension==3.5.2
-zipp==3.7.0
+zipp==3.6.0
