--- a/environment.yml
+++ b/environment.yml
@@ -1,121 +1,252 @@
-name: hnn_binder
+name: base
 channels:
+  - anaconda
   - defaults
 dependencies:
+  - _ipyw_jlab_nb_ext_conf=0.1.0=py38_0
   - _libgcc_mutex=0.1=main
-  - _openmp_mutex=4.5=1_gnu
-  - ca-certificates=2021.10.26=h06a4308_2
-  - certifi=2021.10.8=py37h06a4308_2
-  - ld_impl_linux-64=2.35.1=h7274673_9
+  - anaconda-client=1.7.2=py38_0
+  - anaconda-navigator=1.9.12=py38_0
+  - argon2-cffi=20.1.0=py38h7b6447c_1
+  - astroid=2.4.2=py38_0
+  - async_generator=1.10=py_0
+  - attrs=20.2.0=py_0
+  - backcall=0.2.0=py_0
+  - backports=1.0=py_2
+  - backports.functools_lru_cache=1.6.1=py_0
+  - backports.tempfile=1.0=py_1
+  - backports.weakref=1.0.post1=py_1
+  - beautifulsoup4=4.9.1=py38_0
+  - blas=1.0=mkl
+  - bleach=3.2.1=py_0
+  - brotlipy=0.7.0=py38h7b6447c_1000
+  - bzip2=1.0.8=h7b6447c_0
+  - ca-certificates=2020.10.14=0
+  - certifi=2020.6.20=py38_0
+  - cffi=1.14.3=py38he30daa8_0
+  - chardet=3.0.4=py38_1003
+  - click=7.1.2=py_0
+  - clyent=1.2.2=py38_1
+  - conda=4.9.0=py38_0
+  - conda-build=3.18.11=py38_0
+  - conda-env=2.6.0=1
+  - conda-package-handling=1.6.1=py38h7b6447c_0
+  - conda-verify=3.4.2=py_1
+  - cryptography=3.1.1=py38h1ba5d50_0
+  - cycler=0.10.0=py38_0
+  - dbus=1.13.16=hb2f20db_0
+  - decorator=4.4.2=py_0
+  - defusedxml=0.6.0=py_0
+  - dill=0.3.2=py_0
+  - entrypoints=0.3=py38_0
+  - expat=2.2.9=he6710b0_2
+  - fastcache=1.1.0=py38h7b6447c_0
+  - filelock=3.0.12=py_0
+  - flake8=3.8.3=py_0
+  - fontconfig=2.13.0=h9420a91_0
+  - freetype=2.10.2=h5ab3b9f_0
+  - future=0.18.2=py38_1
+  - glib=2.65.0=h3eb4bd4_0
+  - glob2=0.7=py_0
+  - gmp=6.1.2=hb3b607b_0
+  - gmpy2=2.0.8=py38hd5f6e3b_3
+  - gst-plugins-base=1.14.0=hbbd80ab_1
+  - gstreamer=1.14.0=hb31296c_0
+  - icu=58.2=he6710b0_3
+  - idna=2.10=py_0
+  - importlib_metadata=1.7.0=0
+  - iniconfig=1.0.1=py_0
+  - intel-openmp=2020.2=254
+  - ipykernel=5.3.4=py38h5ca1d4c_0
+  - ipython=7.18.1=py38h5ca1d4c_0
+  - ipython_genutils=0.2.0=py38_0
+  - isort=5.5.4=py38_0
+  - jedi=0.17.2=py38_0
+  - jinja2=2.11.2=py_0
+  - jpeg=9b=h024ee3a_2
+  - json5=0.9.5=py_0
+  - jsonschema=3.2.0=py38_1
+  - jupyter_client=6.1.7=py_0
+  - jupyter_core=4.6.3=py38_0
+  - jupyterlab=2.2.6=py_0
+  - jupyterlab_pygments=0.1.2=py_0
+  - jupyterlab_server=1.2.0=py_0
+  - kiwisolver=1.2.0=py38hfd86e86_0
+  - lazy-object-proxy=1.4.3=py38h7b6447c_0
+  - lcms2=2.11=h396b838_0
+  - ld_impl_linux-64=2.33.1=h53a641e_7
+  - libarchive=3.4.2=h62408e4_0
+  - libedit=3.1.20191231=h14c3975_1
   - libffi=3.3=he6710b0_2
-  - libgcc-ng=9.3.0=h5101ec6_17
-  - libgomp=9.3.0=h5101ec6_17
-  - libstdcxx-ng=9.3.0=hd4cf53a_17
-  - ncurses=6.3=h7f8727e_2
-  - openssl=1.1.1m=h7f8727e_0
-  - pip=21.2.2=py37h06a4308_0
-  - python=3.7.11=h12debd9_0
-  - readline=8.1.2=h7f8727e_1
-  - setuptools=58.0.4=py37h06a4308_0
-  - sqlite=3.37.0=hc218d9a_0
-  - tk=8.6.11=h1ccaba5_0
-  - wheel=0.37.1=pyhd3eb1b0_0
+  - libgcc-ng=9.1.0=hdf63c60_0
+  - libgfortran-ng=7.3.0=hdf63c60_0
+  - liblief=0.10.1=he6710b0_0
+  - libpng=1.6.37=hbc83047_0
+  - libsodium=1.0.18=h7b6447c_0
+  - libstdcxx-ng=9.1.0=hdf63c60_0
+  - libtiff=4.1.0=h2733197_1
+  - libuuid=1.0.3=h1bed415_2
+  - libxcb=1.14=h7b6447c_0
+  - libxml2=2.9.10=he19cac6_1
+  - lz4-c=1.9.2=he6710b0_1
+  - markupsafe=1.1.1=py38h7b6447c_0
+  - matplotlib=3.3.1=0
+  - matplotlib-base=3.3.1=py38h817c723_0
+  - mccabe=0.6.1=py38_1
+  - mistune=0.8.4=py38h7b6447c_1000
+  - mkl=2020.2=256
+  - mkl-service=2.3.0=py38he904b0f_0
+  - mkl_fft=1.2.0=py38h23d657b_0
+  - mkl_random=1.1.1=py38h0573a6f_0
+  - more-itertools=8.5.0=py_0
+  - mpc=1.1.0=h10f8cd9_1
+  - mpfr=4.0.2=hb69a4c5_1
+  - mpmath=1.1.0=py38_0
+  - navigator-updater=0.2.1=py38_0
+  - nbclient=0.5.0=py_0
+  - nbconvert=6.0.6=py38_0
+  - nbformat=5.0.7=py_0
+  - ncurses=6.2=he6710b0_1
+  - nest-asyncio=1.4.1=py_0
+  - notebook=6.1.4=py38_0
+  - numpy=1.18.5=py38ha1c710e_0
+  - numpy-base=1.18.5=py38hde5b4d6_0
+  - olefile=0.46=py_0
+  - openssl=1.1.1h=h7b6447c_0
+  - packaging=20.4=py_0
+  - pandoc=2.10.1=0
+  - pandocfilters=1.4.2=py38_1
+  - parso=0.7.0=py_0
+  - patchelf=0.11=he6710b0_0
+  - pcre=8.44=he6710b0_0
+  - pexpect=4.8.0=py38_0
+  - pickleshare=0.7.5=py38_1000
+  - pillow=7.2.0=py38hb39fc2d_0
+  - pip=20.2.3=py38_0
+  - pkginfo=1.5.0.1=py38_0
+  - pluggy=0.13.1=py38_0
+  - prometheus_client=0.8.0=py_0
+  - prompt-toolkit=3.0.7=py_0
+  - psutil=5.7.2=py38h7b6447c_0
+  - ptyprocess=0.6.0=py38_0
+  - py=1.9.0=py_0
+  - py-lief=0.10.1=py38h403a769_0
+  - pycodestyle=2.6.0=py_0
+  - pycosat=0.6.3=py38h7b6447c_1
+  - pycparser=2.20=py_2
+  - pyflakes=2.2.0=py_0
+  - pygments=2.7.1=py_0
+  - pylint=2.6.0=py38_0
+  - pyopenssl=19.1.0=py_1
+  - pyparsing=2.4.7=py_0
+  - pyqt=5.9.2=py38h05f1152_4
+  - pyrsistent=0.17.3=py38h7b6447c_0
+  - pysocks=1.7.1=py38_0
+  - pytest=6.0.2=py38_0
+  - python=3.8.3=hcff3b4d_2
+  - python-dateutil=2.8.1=py_0
+  - python-libarchive-c=2.9=py_0
+  - pytz=2020.1=py_0
+  - pyyaml=5.3.1=py38h7b6447c_1
+  - pyzmq=19.0.2=py38he6710b0_1
+  - qt=5.9.7=h5867ecd_1
+  - qtpy=1.9.0=py_0
+  - readline=8.0=h7b6447c_0
+  - requests=2.24.0=py_0
+  - ripgrep=12.1.1=0
+  - ruamel_yaml=0.15.87=py38h7b6447c_1
+  - scipy=1.5.0=py38h0b6359f_0
+  - send2trash=1.5.0=py38_0
+  - sip=4.19.13=py38he6710b0_0
+  - six=1.15.0=py_0
+  - soupsieve=2.0.1=py_0
+  - sqlite=3.33.0=h62c20be_0
+  - sympy=1.6.2=py38_0
+  - terminado=0.8.3=py38_0
+  - testpath=0.4.4=py_0
+  - tk=8.6.10=hbc83047_0
+  - toml=0.10.1=py_0
+  - tornado=6.0.4=py38h7b6447c_1
+  - tqdm=4.49.0=py_0
+  - traitlets=5.0.4=py38_0
+  - urllib3=1.25.10=py_0
+  - wcwidth=0.2.5=py_0
+  - webencodings=0.5.1=py38_1
+  - widgetsnbextension=3.5.1=py38_0
+  - wrapt=1.11.2=py38h7b6447c_0
+  - xmltodict=0.12.0=py_0
   - xz=5.2.5=h7b6447c_0
-  - zlib=1.2.11=h7f8727e_4
+  - yaml=0.2.5=h7b6447c_0
+  - zeromq=4.3.2=he6710b0_3
+  - zipp=3.1.0=py_0
+  - zlib=1.2.11=h7b6447c_3
+  - zstd=1.4.5=h9ceee32_0
   - pip:
-    - absl-py==1.0.0
-    - argon2-cffi==21.3.0
-    - argon2-cffi-bindings==21.2.0
-    - attrs==21.4.0
-    - backcall==0.2.0
-    - bleach==4.1.0
-    - cachetools==5.0.0
-    - cffi==1.15.0
-    - charset-normalizer==2.0.11
-    - cycler==0.11.0
-    - debugpy==1.5.1
-    - decorator==5.1.1
-    - defusedxml==0.7.1
-    - entrypoints==0.4
-    - fonttools==4.29.1
-    - google-auth==2.6.0
+    - absl-py==0.14.1
+    - affinewarp==0.1.0
+    - alabaster==0.7.12
+    - babel==2.8.0
+    - cachetools==4.2.4
+    - colorama==0.4.4
+    - docutils==0.16
+    - google-auth==1.35.0
     - google-auth-oauthlib==0.4.6
-    - grpcio==1.43.0
-    - idna==3.3
-    - importlib-metadata==4.10.1
-    - importlib-resources==5.4.0
-    - ipykernel==6.8.0
+    - grpcio==1.41.0
+    - imagesize==1.2.0
+    - importlib-metadata==4.8.1
     - ipympl==0.8.7
-    - ipython==7.31.1
-    - ipython-genutils==0.2.0
     - ipywidgets==7.6.5
-    - jedi==0.18.1
-    - jinja2==3.0.3
-    - joblib==1.1.0
-    - jsonschema==4.4.0
-    - jupyter-client==7.1.2
-    - jupyter-core==4.9.1
-    - jupyterlab-pygments==0.1.2
+    - jeepney==0.7.1
+    - joblib==1.0.1
     - jupyterlab-widgets==1.0.2
-    - kiwisolver==1.3.2
-    - markdown==3.3.6
-    - markupsafe==2.0.1
-    - matplotlib==3.5.1
-    - matplotlib-inline==0.1.3
-    - mistune==0.8.4
-    - nbclient==0.5.10
-    - nbconvert==6.4.1
-    - nbformat==5.1.3
-    - nest-asyncio==1.5.4
+    - keyring==23.2.1
+    - llvmlite==0.36.0
+    - markdown==3.3.4
+    - mne==0.23.1
+    - mpi4py==3.0.3
+    - neuron==7.8.1.1
     - nflows==0.14
-    - notebook==6.4.8
-    - numpy==1.21.5
-    - oauthlib==3.2.0
+    - numba==0.53.1
+    - numpydoc==1.1.0
+    - oauthlib==3.1.1
     - opt-einsum==3.3.0
-    - packaging==21.3
-    - pandocfilters==1.5.0
-    - parso==0.8.3
-    - pexpect==4.8.0
-    - pickleshare==0.7.5
-    - pillow==9.0.1
-    - prometheus-client==0.13.1
-    - prompt-toolkit==3.0.26
-    - protobuf==3.19.4
-    - ptyprocess==0.7.0
+    - pandas==1.2.4
+    - protobuf==3.18.1
     - pyasn1==0.4.8
     - pyasn1-modules==0.2.8
-    - pycparser==2.21
-    - pygments==2.11.2
     - pyknos==0.14.2
-    - pyparsing==3.0.7
     - pyro-api==0.1.2
-    - pyro-ppl==1.8.0
-    - pyrsistent==0.18.1
-    - python-dateutil==2.8.2
-    - pyzmq==22.3.0
-    - requests==2.27.1
-    - requests-oauthlib==1.3.1
-    - rsa==4.8
-    - sbi==0.17.2
-    - scikit-learn==1.0.2
-    - scipy==1.7.3
-    - send2trash==1.8.0
-    - six==1.16.0
-    - tensorboard==2.8.0
+    - pyro-ppl==1.7.0
+    - readme-renderer==29.0
+    - requests-oauthlib==1.3.0
+    - requests-toolbelt==0.9.1
+    - rfc3986==1.5.0
+    - rsa==4.7.2
+    - sbi==0.17.0
+    - scikit-learn==0.24.1
+    - seaborn==0.11.1
+    - secretstorage==3.3.1
+    - setuptools==58.1.0
+    - sklearn==0.0
+    - snowballstemmer==2.0.0
+    - sphinx==3.2.1
+    - sphinx-bootstrap-theme==0.7.1
+    - sphinx-gallery==0.8.1
+    - sphinxcontrib-applehelp==1.0.2
+    - sphinxcontrib-devhelp==1.0.2
+    - sphinxcontrib-htmlhelp==1.0.3
+    - sphinxcontrib-jsmath==1.0.1
+    - sphinxcontrib-qthelp==1.0.3
+    - sphinxcontrib-serializinghtml==1.1.4
+    - tensorboard==2.6.0
     - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
-    - terminado==0.13.1
-    - testpath==0.5.0
-    - threadpoolctl==3.1.0
-    - torch==1.10.2
-    - tornado==6.1
-    - tqdm==4.62.3
-    - traitlets==5.1.1
-    - typing-extensions==4.0.1
-    - urllib3==1.26.8
-    - wcwidth==0.2.5
-    - webencodings==0.5.1
-    - werkzeug==2.0.3
-    - widgetsnbextension==3.5.2
-    - zipp==3.7.0
-prefix: /home/ntolley/anaconda3/envs/hnn_binder
+    - tensorboard-plugin-wit==1.8.0
+    - threadpoolctl==2.1.0
+    - torch==1.9.1
+    - twine==3.4.2
+    - typing-extensions==3.10.0.2
+    - webio-jupyter-extension==0.1.0
+    - werkzeug==2.0.1
+    - wheel==0.37.0
+    - xgboost==1.5.1
+prefix: /home/ntolley/anaconda3
